@@ -1,5 +1,5 @@
 /* info.c -- Display nodes of Info files in multiple windows.
-   $Id: info.c,v 1.21 2007/09/21 22:49:26 karl Exp $
+   $Id: info.c,v 1.22 2007/11/16 23:44:41 karl Exp $
 
    Copyright (C) 1993, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003,
    2004, 2005, 2007 Free Software Foundation, Inc.
@@ -568,7 +568,12 @@ info_error (char *format, void *arg1, void *arg2)
   if (!info_windows_initialized_p || display_inhibited)
     {
       fprintf (stderr, "%s: ", program_name);
-      fprintf (stderr, format, arg1, arg2);
+      if (arg1)
+        fprintf (stderr, format, arg1, arg2);
+      else
+        /* If we're passed a string, just print it.  Otherwise a % in a
+           filename gets treated as a format specifier.  */
+        fputs (format, stderr);
       fprintf (stderr, "\n");
       fflush (stderr);
     }
@@ -582,9 +587,7 @@ info_error (char *format, void *arg1, void *arg2)
         }
       else
         {
-          NODE *temp;
-
-          temp = build_message_node (format, arg1, arg2);
+          NODE *temp = build_message_node (format, arg1, arg2);
           if (info_error_rings_bell_p)
             terminal_ring_bell ();
           inform_in_echo_area (temp->contents);
